# stm32_libopencm3_cmake

./: .gitignore  CMakeLists.txt  README.md  makefile  stm32f411xx.ld
cmake/: gcc-arm-none-eabi.cmake
src/: main.c
